# drewno_mars

./: .gitignore  :  Cargo.toml  Makefile  README.md  TEAM.md  TEAM.txt  logos_test.rs  main.rs  main3.rs  output.txt
io/: errors.txt  input.dm  input2.dm  input3.dm  tokens.txt
src/: Cargo.toml  analysis.rs  assembly.rs  calculator1.lalrpop  format.rs  lib.rs  main.rs  main2.rs  parser.rs  scanner.rs  stddrewno_mars.c
src/analysis/: _type.rs  name.rs
src/assembly/: three_ac.rs  x86.rs
src/io/: errors.txt  input.dm  input2.dm  tokens.txt
src/parser/: ast.rs  grammar.lalrpop  lexer.rs  mod.rs  named_unparser.rs  tests.rs
src/scanner/: lexer.rs  mod.rs  position.rs  tests.rs  tokens.rs
tests/: integration_test.rs  integration_test_lit.rs
tests/input/: test1.expected  test2.dm  test2.expected  test3.expected  test5.expected  test6.expected
tests/p1/: all_valid_tokens.dm  all_valid_tokens.expected  errs.dm  errs.err  errs.expected  lits.dm  lits.err  lits.expected
tests/p3/: test1.dm  test3.dm  test3.err  test4.dm  test4.expected  test5.dm  test6.dm
tests/p4/: InvalidType.dm  InvalidType.err  MultDeclaredId.dm  MultDeclaredId.err  UnDecId.dm  UnDecId.err
tests/p5/: bad_fn_call_and_return.dm  bad_fn_call_and_return.err  bad_print_and_read.dm  bad_print_and_read.err  invalid_gets_operand_and_types.dm  invalid_gets_operand_and_types.err  prop.dm  prop.err  wrong_operands.dm  wrong_operands.err
tests/p6/: blocks.dm  blocks.expected  exp.dm  exp.expected  getret.dm  getret.expected  globals.dm  globals.expected  ifelse.dm  ifelse.expected  magic.dm  (+2 more)
(+43 files in other folders)
